# aiplane

./: .gitignore  CMakeLists.txt  CarRentalEnvironment.cpp  DerivedDeterministicPolicy.h  DerivedPolicy.h  DerivedStochasticPolicy.h  DeterministicPolicy.h  ESoftPolicy.h  GPI.h  LICENSE  MC_FV.cpp  MC_FV.h  MDP.h  MDPCore.h  MDPSolver.h  Policy.h  PolicyIteration.h  QValuePolicyIteration.cpp  QValuePolicyIteration.h  README.md  StochasticPolicy.h  TD.h  VValuePolicyIteration.cpp  VValuePolicyIteration.h  ValueIteration.cpp  ValueIteration.h  m_types.h  m_utils.cpp  m_utils.h  main.cpp  policy.json  value_iteration_policy.json
barto_sutton_exercises/4_7/: CarRentalEnvironment.cpp  CarRentalEnvironment.h  v-iteration_solution.h
barto_sutton_exercises/4_9/: GamblersProblemEnvironment.cpp  GamblersProblemEnvironment.h  v-iteration_solution.h
barto_sutton_exercises/5_1/: Blackjack.cpp  Blackjack.h  mc_fv_solution.h  td_solution.h  v-state_estimation.h
barto_sutton_exercises/6_9/: WindyGridworld.cpp  WindyGridworld.h  td_solution.h
taggame/: Communicator.h  TagGame.cpp  TagGame.h  td_solution.h
